test/libsolidity/syntaxTests/metaTypes/typeNotRegularIdentifierFunction.sol
contract Test {
    function type() public pure {
    }
}
// ----
// ParserError: (29-33): Expected identifier but got 'type'
